# portfolio-analytics

./: .env.example  .gitignore  ARTEMIS_MIGRATION_SUMMARY.md  README.md  fix-portfolio.sh  fix_portfolio.py  index.html  package-lock.json  package.json  sample-portfolio.csv  tailwind.config.ts  test-csv-import.html
.github/workflows/: deploy-factor-api.yml
factors/: .dockerignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  __init__.py  api.py  artemis_api_temp.ipynb  build-and-push.sh  docker-compose.yml  factor_models.ipynb  factor_models_equities.ipynb  main.py  momentum_factor.ipynb  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  utils.py
factors-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md
factors-rs/.github/workflows/: ci.yml
factors-rs/benches/: factor_bench.rs
factors-rs/src/: config.rs  error.rs  lib.rs  main.rs
factors-rs/src/api/: compute.rs  factors.rs  health.rs  mod.rs
factors-rs/src/data/: artemis.rs  coinbase.rs  mappings.rs  mod.rs  yahoo.rs
factors-rs/src/factor/: equity.rs  growth.rs  market.rs  mod.rs  model.rs  momentum.rs  smb.rs  value.rs  weighting.rs
factors-rs/src/logger/: csv_logger.rs  mod.rs
factors-rs/src/models/: config.rs  mod.rs  performance.rs  portfolio.rs  time_series.rs
factors-rs/src/stats/: mod.rs  regression.rs  returns.rs  risk.rs  rolling.rs
src/: App.tsx  index.css
src/components/: Header.tsx  Pagination.tsx  PerformanceChart.tsx  SearchBar.tsx  TimeFilter.tsx  VaultMetrics.tsx  VaultTable.tsx
src/data/: vaultDetails.ts  vaultsData.ts
src/hooks/: use24hPrices.ts  useAuth.ts  useFactorAnalysis.ts  useFactorTimeSeries.ts  useHyperliquidAssets.ts  useHyperliquidWS.ts  useLeadingVaults.ts  usePortfolio.ts  usePortfolioInsights.ts  useVaultDetail.ts
src/lib/: assetTypes.ts  hyperliquid.ts  privy.ts
src/pages/: Analytics.tsx  Auth.tsx  AuthCallback.tsx  Portfolio.tsx  Portfolio.tsx.backup
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260213062148_595c6b24-b346-45cd-8483-2079c5878a3c.sql  20260214000000_privy_migration.sql  20260214100000_fix_user_id_triggers.sql  20260214110000_fix_privy_mapping_rls.sql  20260214120000_temp_relax_rls_for_privy.sql  (+7 more)
(+30 files in other folders)
