[package]
name = "factors-rs"
version = "1.0.0"
edition = "2021"
authors = ["Artemis Portfolio Analytics"]
description = "High-performance factor model analytics server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Data processing
polars = { version = "0.36", features = [
    "lazy",
    "temporal",
    "csv",
    "parquet",
    "dtype-date",
    "dtype-datetime",
    "rank",
    "round_series",
    "cum_agg",
    "rolling_window",
    "rows",
    "strings",
    "is_in",
    "concat_str",
] }

# Statistics
statrs = "0.17"
linfa = "0.7"
linfa-linalg = "0.1"
ndarray = "0.15"
ndarray-stats = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CSV
csv = "1.3"

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Yahoo Finance
yahoo_finance_api = "2"

# Async utilities
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
insta = { version = "1.34", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "factor_bench"
harness = false
