[project]
name = "factors"
version = "0.1.0"
description = "Cryptocurrency and equity factor modeling system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "artemis",
    "requests>=2.31.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "yfinance>=0.2.36",
]
